--- a/currency.html
+++ b/currency.html
@@ -787,15 +787,15 @@
         </div>
     </div>
     
-    <!-- CTA Section -->
-    <div class="text-center mt-5 mb-5">
-        <h3>Klar for å komme i gang?</h3>
-        <p class="lead">Opprett en gratis konto og få tilgang til alle funksjoner</p>
-        <a href="/register" class="btn btn-primary btn-lg">
-            <i class="bi bi-person-plus"></i> Opprett konto nå
+    <!-- CTA Section with proper styling -->
+    <div class="text-center mt-5 mb-5" style="background: linear-gradient(135deg, #28a745, #20c997) !important; color: #ffffff !important; padding: 3rem 2rem !important; border-radius: 12px !important; box-shadow: 0 8px 25px rgba(40, 167, 69, 0.3) !important;">
+        <h3 style="color: #ffffff !important; text-shadow: 0 1px 3px rgba(0,0,0,0.3) !important;">Klar for å komme i gang?</h3>
+        <p class="lead" style="color: #ffffff !important; text-shadow: 0 1px 3px rgba(0,0,0,0.3) !important;">Opprett en gratis konto og få tilgang til alle funksjoner</p>
+        <a href="/register" class="btn btn-light btn-lg" style="background: #ffffff !important; color: #28a745 !important; border: none !important; font-weight: 600 !important; padding: 0.75rem 2rem !important; border-radius: 25px !important; box-shadow: 0 4px 12px rgba(0,0,0,0.1) !important;">
+            <i class="bi bi-person-plus" style="color: #28a745 !important;"></i> Opprett konto nå
         </a>
-        <p class="mt-3">
-            <small>Ingen kredittkort påkrevd • Ubegrenset demo-tilgang</small>
+        <p class="mt-3" style="color: #ffffff !important; text-shadow: 0 1px 3px rgba(0,0,0,0.3) !important;">
+            <small style="color: #ffffff !important; opacity: 0.9;">Ingen kredittkort påkrevd • Ubegrenset demo-tilgang</small>
         </p>
     </div>
 </div>
