--- a/app/base.html
+++ b/app/base.html
@@ -313,7 +313,7 @@
                     
                     {% if current_user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('portfolio.portfolio_index') }}">
+                            <a class="nav-link" href="{{ url_for('portfolio.index') }}">
                                 <i class="bi bi-briefcase"></i> Portefølje
                             </a>
                         </li>
