--- a/currency.html
+++ b/currency.html
@@ -547,7 +547,7 @@
                     </div>
                     
                     <!-- For uinnloggede brukere: Gå til pricing side -->
-                    <a href="/pricing" class="btn btn-light btn-lg w-100 mb-3">
+                    <a href="/pricing" class="btn btn-warning btn-lg w-100 mb-3">
                         <i class="bi bi-rocket"></i> Start abonnement nå
                     </a>
                     
