--- a/app/base.html
+++ b/app/base.html
@@ -647,7 +647,7 @@
                             <li><a class="dropdown-item" href="{{ url_for('portfolio_advanced.advanced_portfolio') }}">
                                 <i class="bi bi-cpu-fill"></i> Avansert Analytics
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('advanced_analytics.index') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('advanced_features.index') }}">
                                 <i class="bi bi-robot"></i> ML Analytics
                             </a></li>
                         </ul>
