--- a/app/routes/base.html
+++ b/app/routes/base.html
@@ -414,11 +414,11 @@
                     
                     <!-- Portfolio Dropdown -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="{{ url_for('portfolio.index') }}" role="button" data-bs-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle" href="{{ url_for('portfolio.portfolio_overview') }}" role="button" data-bs-toggle="dropdown">
                             <i class="bi bi-briefcase"></i> Portfolio
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{{ url_for('portfolio.index') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('portfolio.portfolio_overview') }}">
                                 <i class="bi bi-briefcase"></i> Mine porteføljer
                             </a></li>
                             <li><a class="dropdown-item" href="{{ url_for('portfolio.watchlist') }}">
